removed base url

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<base href="/prax-graphql-demo/">
+<base href="/">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>prax-graphql-demo</title>
