--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,7 +21,7 @@
 
 <script>
   window.ver = '{{version}}'
-  window.developmentMode = {{String(Boolean(deploySettings.developmentMode))}}
+  window.devMode = {{String(Boolean(deploySettings.devMode))}}
 </script>
 
 <script src="scripts/main.js?{{version}}"></script>
